--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     </head>
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.js"></script>
+        <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
         <script>
             //Our JS will go here
             const scene = new THREE.Scene();
             const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+            camera.position.set(0,0, 100);
+            camera.lookAt(0, 0, 0)
 
             const renderer = new THREE.WebGLRenderer();
             renderer.setSize(window.innerWidth, window.innerHeight);
@@ -23,7 +26,24 @@
             const cube = new THREE.Mesh(geometry, material);
             scene.add(cube);
 
+            const points = []
+            points.push(new THREE.Vector3(-10, 0, 0));
+            points.push(new THREE.Vector3(0, 10, 0));
+            points.push(new THREE.Vector3(10, 0, 0));
+
+            const geometry2 = new THREE.BufferGeometry().setFromPoints(points);
+            const material2 = new THREE.MeshBasicMaterial({ color: 0x00ff00 })
+            const line = new THREE.Line(geometry2, material2);
+            scene.add(line)
+
             camera.position.z = 5
+
+            const loader = new THREE.GLTFLoader();
+            loader.load('./XYZ_threeJS_AMPMan.gltf', function (gltf){
+                scene.add(gltf.scene);
+            }, undefined, function (error){
+                console.error(error);
+            })
 
             function animate(){
                 requestAnimationFrame(animate);
