--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <script>
             //Our JS will go here
             const scene = new THREE.Scene();
-            const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+            const size = {
+                width: 800,
+                height: 600
+            }
+            const camera = new THREE.PerspectiveCamera(75, size.width/size.height, 0.1, 1000);
             camera.position.set(0,0, 100);
             camera.lookAt(0, 0, 0)
 
@@ -40,7 +44,11 @@
 
             const loader = new THREE.GLTFLoader();
             loader.load('./XYZ_threeJS_AMPMan.gltf', function (gltf){
-                scene.add(gltf.scene);
+                const model = gltf.scene;
+				model.position.set( 1, 1, 0 );
+				model.scale.set( 0.05, 0.02, 0.01);
+				scene.add( model );
+                
             }, undefined, function (error){
                 console.error(error);
             })
