--- a/src/train.html
+++ b/src/train.html
@@ -24,7 +24,7 @@
 			<a href="https://www.artstation.com/glenatron" target="_blank" rel="noopener">Glen Fox</a>, CC Attribution.
         </div>
         
-        <script type="module">
+        <script type="module" src="./train.js">
             
         </script>
     </body>
